# CCSParser

./: .bazelignore  .bazelrc  .clang-format  .clangd  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: release.yml
docs/: api_reference.md  architecture.md  parser_research.md  perf_audit.md  test_matrix.md
include/ccsparser/: ccsparser.h  contest_store.h  diagnostic.h  event.h  file_ref_resolver.h  http_client.h  objects.h  observer.h  parse_options.h  parser.h  scoreboard.h  scoreboard_builder.h  status.h  types.h
src/api/: parser.cc  rest_api_parser.cc  xml_feed_parser.cc
src/core/: diagnostic.cc  status.cc  time_utils.cc  time_utils.h  types.cc
src/event/: ndjson_line_parser.cc  ndjson_line_parser.h
src/io/: file_ref_resolver.cc  package_loader.cc
src/net/: http_client.cc
src/profile/: version_profile.cc  version_profile.h
src/profile/decoders/: decoder_common.cc  decoder_common.h
src/scoreboard/: scoreboard_builder.cc
src/store/: contest_store.cc
tests/fixtures/: basic_2023_06.ndjson  basic_2026_01.ndjson  collection_replace.ndjson  malformed_lines.ndjson
tests/integration/: case_feed_test.cc  domjudge_rest_api_test.cc
tests/integration/package/: package_test.cc
tests/integration/spec_2023_06/: spec_2023_06_test.cc
tests/integration/spec_2026_01/: spec_2026_01_test.cc
tests/regression/: regression_test.cc
tests/unit/: contest_store_test.cc  diagnostics_test.cc  file_ref_resolver_test.cc  http_client_test.cc  ndjson_line_parser_test.cc  profile_2023_06_decoder_test.cc  profile_2026_01_decoder_test.cc  scoreboard_builder_test.cc  time_utils_test.cc  xml_feed_parser_test.cc
tools/: eventfeed_scoreboard_preview_main.cc  html_scoreboard_renderer.cc  html_scoreboard_renderer.h  scoreboard_csv_dump_main.cc
