module(
    name = "ccsparser",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "wolfd_bazel_compile_commands", version = "0.5.2")

# nlohmann/json — downloaded as a single header via repository rule.
third_party_deps = use_extension("//third_party:deps.bzl", "third_party_deps")
use_repo(third_party_deps, "nlohmann_json", "pugixml", "libcurl")

# googletest 1.17.0's BUILD.bazel is missing the load() for cc_library/cc_test,
# which Bazel 9 requires.  patch_cmds runs via bash on all platforms (including
# Windows via Git for Windows), so a single awk command is sufficient.
single_version_override(
    module_name = "googletest",
    version = "1.17.0",
    patch_cmds = [
        "awk '/^licenses/{print \"load(\\\"@@rules_cc+//cc:defs.bzl\\\", \\\"cc_binary\\\", \\\"cc_library\\\", \\\"cc_test\\\")\"} {print}' BUILD.bazel > BUILD.bazel.tmp && mv BUILD.bazel.tmp BUILD.bazel",
    ],
)
